# irradiance-pv

./: .gitignore  README.md  df_test.csv  license.txt  pyproject.toml  setup.py  setup.py.old
irradiance/: REAMDE.md  Untitled-1.py  example.py  irradiance.py  pvlib_example_run.py  pvsystem.py  python_code.py  spa-delft.py  spa.py  spa_delft.py  spa_sb.py  test_spa-delft.py
irradiance/tests/: aoi results.txt  test solar positions.txt
irradiance_pv/: README.md  example.py  irradiance_pv.py
irradiance_pv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_spa-delft.py
