[tool.poetry]
name = "irradiance_pv"
version = "1.26"
description = "\"Calculate in plane irradiance for a surface\""
readme = "README.md"
homepage = "https://github.com/sbadillo/irradiance-pv"
authors = ["-sergiob <sbadilloworks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
