[tool.poetry]
name = "irradiance_pv"
version = "1.27"
description = "\"Calculate in plane irradiance for a surface\""
readme = "README.md"
homepage = "https://github.com/sbadillo/irradiance-pv"
authors = ["-sergiob <sbadilloworks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
